--- a/content/manual/problems/grand-unified-theory.mdx
+++ b/content/manual/problems/grand-unified-theory.mdx
@@ -12,7 +12,7 @@
 4. [The Complexity Functional: How Minimality Is Made Explicit](#4-the-complexity-functional-how-minimality-is-made-explicit)
 5. [Neutrino Rigidity: The Decisive Constraint](#5-neutrino-rigidity-the-decisive-constraint)
 6. [The Forcing Theorem: Why $\mathrm{SO}(10)$ and Nothing Else](#6-the-forcing-theorem-why-mathrmso10-and-nothing-else)
-7. [The Competitive Exclusion — Carrier by Carrier](#7-the-competitive-exclusion--carrier-by-carrier)
+7. [The Competitive Exclusion - Carrier by Carrier](#7-the-competitive-exclusion--carrier-by-carrier)
 8. [The $5/3$ Factor Without Assuming Any Unified Group](#8-the-53-factor-without-assuming-any-unified-group)
 9. [Unique Breaking Architecture and Minimal Higgs Content](#9-unique-breaking-architecture-and-minimal-higgs-content)
 10. [The Collapse of Model-Building Freedom](#10-the-collapse-of-model-building-freedom)
@@ -23,19 +23,19 @@
 
 ## 1. The Over-Choice Problem in Grand Unification
 
-Grand Unified Theories have been part of theoretical physics for half a century. The idea is powerful: the three gauge forces of the Standard Model — strong, weak, and electromagnetic — might descend from a single unified gauge symmetry at high energies, with the distinct forces emerging as the symmetry breaks down at lower scales.
+Grand Unified Theories have been part of theoretical physics for half a century. The idea is powerful: the three gauge forces of the Standard Model, strong, weak, and electromagnetic, might descend from a single unified gauge symmetry at high energies, with the distinct forces emerging as the symmetry breaks down at lower scales.
 
 The problem is not that unification fails. The problem is that it succeeds too easily.
 
-Starting from the same low-energy facts — the Standard Model gauge group $\mathrm{SU}(3)_c \times \mathrm{SU}(2)_L \times \mathrm{U}(1)_Y$, its chiral fermion spectrum, anomaly cancellation, and the experimental evidence for neutrino mass — physicists have constructed many ultraviolet completions. $\mathrm{SU}(5)$ in its original Georgi-Glashow form. Flipped $\mathrm{SU}(5) \times \mathrm{U}(1)$. $\mathrm{SO}(10)$. $\mathrm{E}_6$. Trinification models. Pati-Salam constructions. Variants with additional Higgs sectors, intermediate symmetry-breaking scales, threshold corrections, and model-dependent tuning.
+Starting from the same low-energy facts the Standard Model gauge group $\mathrm{SU}(3)_c \times \mathrm{SU}(2)_L \times \mathrm{U}(1)_Y$, its chiral fermion spectrum, anomaly cancellation, and the experimental evidence for neutrino mass physicists have constructed many ultraviolet completions. $\mathrm{SU}(5)$ in its original Georgi-Glashow form. Flipped $\mathrm{SU}(5) \times \mathrm{U}(1)$. $\mathrm{SO}(10)$. $\mathrm{E}_6$. Trinification models. Pati-Salam constructions. Variants with additional Higgs sectors, intermediate symmetry-breaking scales, threshold corrections, and model-dependent tuning.
 
-All of them can be made compatible with the observed low-energy physics — *if you choose enough structure by hand*.
+All of them can be made compatible with the observed low-energy physics if you choose enough structure by hand.
 
-That freedom is not a virtue. It is a failure of selection. If the unified group is chosen by physicists rather than forced by the physics, then unification is a modelling convention, not a law. And if every proposed GUT requires auxiliary assumptions — chosen Higgs representations, chosen breaking chains, chosen threshold structures, chosen flavour textures — to reproduce the same low-energy record, then the "prediction" is really a retroactive fit dressed in the language of symmetry.
+That freedom is not a virtue. It is a failure of selection. If the unified group is chosen by physicists rather than forced by the physics, then unification is a modelling convention, not a law. And if every proposed GUT requires auxiliary assumptions, chosen Higgs representations, chosen breaking chains, chosen threshold structures, chosen flavour textures to reproduce the same low-energy record, then the "prediction" is really a retroactive fit dressed in the language of symmetry.
 
 The work presented here takes a different position entirely. It asks:
 
-> *Is there a canonical admissibility and minimality principle under which the Standard Model record predicates force a unique Grand Unified completion — not as a hypothesis, but as a structural necessity?*
+> *Is there a canonical admissibility and minimality principle under which the Standard Model record predicates force a unique Grand Unified completion not as a hypothesis, but as a structural necessity?*
 
 The answer is yes. The forced completion is $\mathrm{SO}(10)$.
 
@@ -45,15 +45,15 @@ The answer is yes. The forced completion is $\mathrm{SO}(10)$.
 
 To avoid replacing one set of ad hoc choices with another, a genuine selection principle must satisfy several non-trivial requirements:
 
-It must **not assume a unified group**. If $\mathrm{SO}(10)$ appears at the end, it must be derived, not inserted as a starting point. The principle must be capable of considering — and rejecting — all alternatives.
+It must not assume a unified group. If $\mathrm{SO}(10)$ appears at the end, it must be derived, not inserted as a starting point. The principle must be capable of considering and rejecting all alternatives.
 
-It must **not use phenomenological fitting**. Adjusting parameters to match observations is not selection; it is reverse engineering. The principle must operate before any coupling constants, mass hierarchies, or mixing angles are specified.
+It must not use phenomenological fitting. Adjusting parameters to match observations is not selection; it is reverse engineering. The principle must operate before any coupling constants, mass hierarchies, or mixing angles are specified.
 
-It must **define minimality explicitly**. "Simplicity" as an aesthetic preference is not a scientific criterion. Minimality must be encoded in a concrete mathematical functional that can be computed and compared across candidates.
+It must define minimality explicitly. "Simplicity" as an aesthetic preference is not a scientific criterion. Minimality must be encoded in a concrete mathematical functional that can be computed and compared across candidates.
 
-It must **respect the record**. Structures that are invisible to observation at the ledger scale — that produce no measurable effect at the energies where the Standard Model operates — must not be credited toward selection. Only record-visible features count.
+It must respect the record. Structures that are invisible to observation at the ledger scale that produce no measurable effect at the energies where the Standard Model operates must not be credited toward selection. Only record-visible features count.
 
-It must **enforce anomaly closure after quotienting**. Anomaly cancellation must hold in the record-visible sector, not merely "in principle" within a larger UV construction where cancellations might depend on structure that has been integrated out.
+It must enforce anomaly closure after quotienting. Anomaly cancellation must hold in the record-visible sector, not merely "in principle" within a larger UV construction where cancellations might depend on structure that has been integrated out.
 
 The Tier-0 determinant-closed admissibility framework satisfies all of these requirements.
 
@@ -61,7 +61,7 @@ The Tier-0 determinant-closed admissibility framework satisfies all of these req
 
 ## 3. Determinant-Closed Admissibility
 
-A candidate completion — any proposed UV gauge theory that reduces to the Standard Model at low energies — is treated as law-bearing only if it is a fixed point of the closure recursion:
+A candidate completion any proposed UV gauge theory that reduces to the Standard Model at low energies is treated as law-bearing only if it is a fixed point of the closure recursion:
 
 $$
 \mathcal{L} = \Omega,\Delta,\partial(\mathcal{L})
@@ -69,7 +69,7 @@ $$
 
 Three operators, applied in sequence, implement the structural test:
 
-**$\partial$ (Record quotient).** Strips away structure that does not contribute to the record predicates at the ledger scale $\mu_L$. Hidden sectors, sterile fields with no measurable couplings, and UV structure that is invisible to low-energy observation are quotiented out. What remains after $\partial$ is the record-visible skeleton of the candidate — the part that actually matters.
+**$\partial$ (Record quotient).** Strips away structure that does not contribute to the record predicates at the ledger scale $\mu_L$. Hidden sectors, sterile fields with no measurable couplings, and UV structure that is invisible to low-energy observation are quotiented out. What remains after $\partial$ is the record-visible skeleton of the candidate, the part that actually matters.
 
 **$\Delta$ (Degeneracy collapse).** Identifies prediction-equivalent branches. If two different symmetry-breaking chains, or two different Higgs sector configurations, or two different intermediate-scale architectures produce the same observable physics at $\mu_L$ after record quotienting, they are collapsed into a single equivalence class. This eliminates the illusion of choice created by model-building freedom that has no physical consequence.
 
@@ -77,7 +77,7 @@ Three operators, applied in sequence, implement the structural test:
 
 The condition $\mathcal{L} = \Omega\Delta\partial(\mathcal{L})$ states that the candidate is already in its canonical, law-bearing form: applying the quotient, collapse, and completion operators returns the candidate unchanged. Anything that is not a fixed point is either incomplete, overbuilt, or carrying structural noise that cannot survive the admissibility test.
 
-This is not a new symmetry proposal. It is a selection principle — a mathematical sieve that acts on the space of all conceivable UV completions and retains only those that are structurally stable, record-faithful, and minimally complex.
+This is not a new symmetry proposal. It is a selection principle, a mathematical sieve that acts on the space of all conceivable UV completions and retains only those that are structurally stable, record-faithful, and minimally complex.
 
 ---
 
@@ -91,13 +91,13 @@ $$
 
 Each term penalises a specific form of structural excess, computed *after* record-quotienting and degeneracy collapse:
 
-**$\mathcal{A}(\mathcal{L})$ — Anomaly load.** The sum of absolute values of all record-visible anomaly coefficients after $\partial$-quotienting. This is zero for any admissible completion (anomaly cancellation is a hard constraint), but its inclusion ensures that near-cancellation without exact vanishing is not mistaken for admissibility.
+**$\mathcal{A}(\mathcal{L})$ - Anomaly load.** The sum of absolute values of all record-visible anomaly coefficients after $\partial$-quotienting. This is zero for any admissible completion (anomaly cancellation is a hard constraint), but its inclusion ensures that near-cancellation without exact vanishing is not mistaken for admissibility.
 
-**$D_{\mathrm{ferm}}(\mathcal{L})$ — Fermion representation budget.** The total dimensionality of the fermionic representations needed to host three generations including $\nu_R$, computed post-$\partial$. Fragmenting a generation across multiple unrelated irreducible representations increases this budget. Vectorlike clutter that is not record-silent also contributes.
+**$D_{\mathrm{ferm}}(\mathcal{L})$ - Fermion representation budget.** The total dimensionality of the fermionic representations needed to host three generations including $\nu_R$, computed post-$\partial$. Fragmenting a generation across multiple unrelated irreducible representations increases this budget. Vectorlike clutter that is not record-silent also contributes.
 
-**$D_{\mathrm{H}}(\mathcal{L})$ — Higgs and symmetry-breaking budget.** The total dimensionality of the Higgs representations required for a $\Delta$-stable breaking chain to the Standard Model, plus penalties for non-record intermediate breaking stages. Overbuilt Higgs sectors — additional representations beyond what is needed for symmetry breaking, Yukawa structure, and neutrino mass generation — inflate this term.
+**$D_{\mathrm{H}}(\mathcal{L})$ - Higgs and symmetry-breaking budget.** The total dimensionality of the Higgs representations required for a $\Delta$-stable breaking chain to the Standard Model, plus penalties for non-record intermediate breaking stages. Overbuilt Higgs sectors additional representations beyond what is needed for symmetry breaking, Yukawa structure, and neutrino mass generation inflate this term.
 
-**$\mathrm{rk}\big(G(\mathcal{L})\big)$ — Group rank.** The rank of the UV gauge group. Larger groups that are not forced by the record predicates are penalised for unnecessary structural inflation.
+**$\mathrm{rk}\big(G(\mathcal{L})\big)$ - Group rank.** The rank of the UV gauge group. Larger groups that are not forced by the record predicates are penalised for unnecessary structural inflation.
 
 The weights $\alpha, \beta, \gamma > 0$ are *ledger-locked*: they are endomorphism-level algebraic scalars, not tunable fit parameters. They do not deform spacetime geometry or alter physical content. And critically, in the forcing theorem that follows, the precise values of these weights do not matter. The complexity dominance of $\mathrm{SO}(10)$ over all alternatives is *strict for any positive choice of weights*. The result does not depend on fine-tuning the selection principle itself.
 
@@ -111,9 +111,9 @@ $$
 
 ## 5. Neutrino Rigidity: The Decisive Constraint
 
-Neutrino oscillations — the experimental discovery that neutrinos have mass and mix between flavour states — are part of the record predicates at $\mu_L$. In conventional model-building, neutrino masses can be accommodated through many mechanisms: Dirac masses, Majorana masses, Type-I seesaw, Type-II seesaw, Type-III seesaw, radiative mechanisms, inverse seesaw, and various combinations. This plurality normally *enlarges* the space of viable completions.
+Neutrino oscillations, the experimental discovery that neutrinos have mass and mix between flavour states are part of the record predicates at $\mu_L$. In conventional model-building, neutrino masses can be accommodated through many mechanisms: Dirac masses, Majorana masses, Type-I seesaw, Type-II seesaw, Type-III seesaw, radiative mechanisms, inverse seesaw, and various combinations. This plurality normally *enlarges* the space of viable completions.
 
-In the determinant-closed framework, neutrino physics plays the opposite role. It is a *rigidity constraint* — the single most powerful structural pressure in the entire selection problem.
+In the determinant-closed framework, neutrino physics plays the opposite role. It is a rigidity constraint, the single most powerful structural pressure in the entire selection problem.
 
 The combination of admissibility under $\Omega\Delta\partial$, $\Delta$-stability (no prediction-degenerate repair structure), and minimality under $D_{\mathrm{H}}$ and $D_{\mathrm{ferm}}$ collapses all admissible neutrino mechanisms to a single $\partial$-equivalence class: the seesaw form.
 
@@ -123,7 +123,7 @@ $$
 
 This is a proven result, not an assumption. Purely Dirac-only neutrino scenarios are excluded unless they collapse under the closure recursion to an effective operator of this same seesaw form. Multiple superimposed mechanisms are inadmissible unless their composite contribution reduces to a single fixed-point class. The neutrino sector is structurally rigid.
 
-The consequence for carrier selection is decisive. The seesaw mechanism requires a right-handed neutrino $\nu_R$ with a heavy Majorana mass $M_R$ generated by the Higgs sector. If $\nu_R$ is not internal to the unified generation representation — if it must be added as an external patch — then additional Higgs structure is needed to generate $M_R$, which increases $D_{\mathrm{H}}$, or additional fermion representations are required, which increases $D_{\mathrm{ferm}}$, or the construction introduces prediction-degenerate branches that violate $\Delta$-stability.
+The consequence for carrier selection is decisive. The seesaw mechanism requires a right-handed neutrino $\nu_R$ with a heavy Majorana mass $M_R$ generated by the Higgs sector. If $\nu_R$ is not internal to the unified generation representation if it must be added as an external patch, then additional Higgs structure is needed to generate $M_R$, which increases $D_{\mathrm{H}}$, or additional fermion representations are required, which increases $D_{\mathrm{ferm}}$, or the construction introduces prediction-degenerate branches that violate $\Delta$-stability.
 
 This is the mechanism that eliminates most candidate carriers. It is not aesthetics. It is not preference. It is a structural incompatibility between the neutrino record predicate and the representation theory of specific groups, amplified through the admissibility budget.
 
@@ -139,31 +139,31 @@ The central result of the accompanying paper is a uniqueness theorem:
 
 The proof proceeds through five dominance steps:
 
-**Step 1 — Anomaly closure.** All admissible completions have $\mathcal{A} = 0$ by construction. This establishes the floor but does not distinguish candidates. What it does enforce is that anomaly cancellation must hold *after* record-quotienting — candidates that rely on record-silent anomaly repairs are excluded.
+**Step 1 - Anomaly closure.** All admissible completions have $\mathcal{A} = 0$ by construction. This establishes the floor but does not distinguish candidates. What it does enforce is that anomaly cancellation must hold *after* record-quotienting candidates that rely on record-silent anomaly repairs are excluded.
 
-**Step 2 — Neutrino rigidity forces internal $\nu_R$ hosting.** The seesaw equivalence class requires $\nu_R$ inside the carrier representation. Any completion that externalises $\nu_R$ must supply additional Higgs couplings or additional fermion structure, inflating $D_{\mathrm{H}}$ or $D_{\mathrm{ferm}}$ beyond the $\mathrm{SO}(10)$ benchmark.
+**Step 2 - Neutrino rigidity forces internal $\nu_R$ hosting.** The seesaw equivalence class requires $\nu_R$ inside the carrier representation. Any completion that externalises $\nu_R$ must supply additional Higgs couplings or additional fermion structure, inflating $D_{\mathrm{H}}$ or $D_{\mathrm{ferm}}$ beyond the $\mathrm{SO}(10)$ benchmark.
 
-**Step 3 — Fermion economy selects unified irreducible hosting.** Among traditional candidates, the minimal post-$\partial$ hosting of one full generation including $\nu_R$ in a single irreducible representation is achieved by the $\mathbf{16}$ spinor of $\mathrm{Spin}(10)$. Fragmenting the generation across multiple representations increases $D_{\mathrm{ferm}}$ and typically requires additional Higgs structure.
+**Step 3 - Fermion economy selects unified irreducible hosting.** Among traditional candidates, the minimal post-$\partial$ hosting of one full generation including $\nu_R$ in a single irreducible representation is achieved by the $\mathbf{16}$ spinor of $\mathrm{Spin}(10)$. Fragmenting the generation across multiple representations increases $D_{\mathrm{ferm}}$ and typically requires additional Higgs structure.
 
-**Step 4 — Higgs/breaking economy.** For any completion, realising $G(\mathcal{L}) \to G_{\mathrm{SM}}$ with Yukawa completeness and neutrino mass generation requires a functionally complete Higgs sector. Non-minimal carriers typically require additional Higgs irreducible representations, additional intermediate stages, or additional threshold structure — all of which inflate $D_{\mathrm{H}}$.
+**Step 4 - Higgs/breaking economy.** For any completion, realising $G(\mathcal{L}) \to G_{\mathrm{SM}}$ with Yukawa completeness and neutrino mass generation requires a functionally complete Higgs sector. Non-minimal carriers typically require additional Higgs irreducible representations, additional intermediate stages, or additional threshold structure all of which inflate $D_{\mathrm{H}}$.
 
-**Step 5 — Rank overgrowth.** If the carrier group is larger than $\mathrm{SO}(10)$ without being forced by the record, the rank penalty $\gamma,\mathrm{rk}(G)$ strictly increases. Under the decoupling lock, record-silent overgrowth cannot reduce other terms enough to compensate.
+**Step 5 - Rank overgrowth.** If the carrier group is larger than $\mathrm{SO}(10)$ without being forced by the record, the rank penalty $\gamma,\mathrm{rk}(G)$ strictly increases. Under the decoupling lock, record-silent overgrowth cannot reduce other terms enough to compensate.
 
 The combined result is strict dominance: $\mathrm{Comp}(\mathcal{L}) > \mathrm{Comp}(\mathrm{SO}(10))$ unless $\mathcal{L}$ is $\partial$-equivalent to the $\mathrm{SO}(10)$ benchmark. The carrier is forced.
 
 ---
 
-## 7. The Competitive Exclusion — Carrier by Carrier
+## 7. The Competitive Exclusion - Carrier by Carrier
 
 The forcing theorem is not abstract. Each standard GUT candidate is tested and explicitly excluded:
 
-**$\mathrm{SU}(5)$ (Georgi-Glashow).** The fundamental matter representations of $\mathrm{SU}(5)$ — the $\bar{\mathbf{5}} \oplus \mathbf{10}$ decomposition — account for only 15 of the 16 states in a full generation. The right-handed neutrino is not included. Accommodating neutrino mass requires adding $\nu_R$ as an external singlet, which means the seesaw mechanism needs additional Higgs structure (typically a $\mathbf{15}*H$ or higher representation) to generate the Majorana mass $M_R$. This inflates $D*{\mathrm{H}}$ and fails the neutrino rigidity criterion. The minimal $\mathrm{SU}(5)$ Higgs sector also faces the notorious doublet-triplet splitting problem — an exact cancellation that constitutes fine-tuning and violates $\Delta$-stability.
+**$\mathrm{SU}(5)$ (Georgi-Glashow).** The fundamental matter representations of $\mathrm{SU}(5)$ - the $\bar{\mathbf{5}} \oplus \mathbf{10}$ decomposition account for only 15 of the 16 states in a full generation. The right-handed neutrino is not included. Accommodating neutrino mass requires adding $\nu_R$ as an external singlet, which means the seesaw mechanism needs additional Higgs structure (typically a $\mathbf{15}*H$ or higher representation) to generate the Majorana mass $M_R$. This inflates $D*{\mathrm{H}}$ and fails the neutrino rigidity criterion. The minimal $\mathrm{SU}(5)$ Higgs sector also faces the notorious doublet-triplet splitting problem, an exact cancellation that constitutes fine-tuning and violates $\Delta$-stability.
 
 **Flipped $\mathrm{SU}(5) \times \mathrm{U}(1)$.** Rearranging fermion assignments within an $\mathrm{SU}(5) \times \mathrm{U}(1)$ structure introduces abelian mixing freedom not fixed by a simple carrier embedding. The construction requires additional breaking structure to reach the Standard Model, incurring intermediate-stage penalties $\delta_{\mathrm{break}}$ and inflating $D_{\mathrm{H}}$.
 
-**$\mathrm{E}_6$ and larger exceptional groups.** $\mathrm{E}*6$ unifies one generation in the $\mathbf{27}$ representation — which contains 27 states per generation, 11 more than needed. These additional states are chiral exotics that are not forced by the Standard Model record. They must be made heavy by additional Higgs mechanisms, raising $D*{\mathrm{ferm}}$, $D_{\mathrm{H}}$, and $\mathrm{rk}(G)$ simultaneously. The problem only worsens for $\mathrm{E}_7$ and $\mathrm{E}_8$.
+**$\mathrm{E}_6$ and larger exceptional groups.** $\mathrm{E}*6$ unifies one generation in the $\mathbf{27}$ representation which contains 27 states per generation, 11 more than needed. These additional states are chiral exotics that are not forced by the Standard Model record. They must be made heavy by additional Higgs mechanisms, raising $D*{\mathrm{ferm}}$, $D_{\mathrm{H}}$, and $\mathrm{rk}(G)$ simultaneously. The problem only worsens for $\mathrm{E}_7$ and $\mathrm{E}_8$.
 
-**Pati-Salam $\mathrm{SU}(4) \times \mathrm{SU}(2)_L \times \mathrm{SU}(2)_R$.** Not a simple group — it is a semi-simple product. Reaching the Standard Model requires additional symmetry breaking, which inflates $D_{\mathrm{H}}$ and incurs intermediate-stage penalties. While Pati-Salam is often treated as an intermediate stage in $\mathrm{SO}(10)$ breaking, as a *final carrier* it is strictly dominated.
+**Pati-Salam $\mathrm{SU}(4) \times \mathrm{SU}(2)_L \times \mathrm{SU}(2)_R$.** Not a simple group, it is a semi-simple product. Reaching the Standard Model requires additional symmetry breaking, which inflates $D_{\mathrm{H}}$ and incurs intermediate-stage penalties. While Pati-Salam is often treated as an intermediate stage in $\mathrm{SO}(10)$ breaking, as a *final carrier* it is strictly dominated.
 
 **Trinification $\mathrm{SU}(3)^3$.** Fails neutrino rigidity and requires exotic structure not forced by the record.
 
@@ -229,7 +229,7 @@ $\mathrm{SO}(10)$ is the only carrier that closes all constraints simultaneously
 
 ## 8. The $5/3$ Factor Without Assuming Any Unified Group
 
-A common objection to selection frameworks is that they might simply be restating conventional results in new language. To address this directly, the framework derives a famous, concrete GUT invariant from first principles — without assuming any unified group as input.
+A common objection to selection frameworks is that they might simply be restating conventional results in new language. To address this directly, the framework derives a famous, concrete GUT invariant from first principles without assuming any unified group as input.
 
 The canonical hypercharge normalisation factor:
 
@@ -239,19 +239,19 @@ $$
 
 This factor is traditionally obtained by embedding $\mathrm{U}(1)_Y$ into $\mathrm{SU}(5)$ and matching trace normalisations. In the determinant-closed framework, it is derived using only three ingredients:
 
-**Anomaly closure fixes hypercharge ratios.** The mixed anomaly equations — $[\mathrm{SU}(2)_L]^2\mathrm{U}(1)_Y$, $[\mathrm{SU}(3)_c]^2\mathrm{U}(1)_Y$, $\mathrm{grav}^2\mathrm{U}(1)_Y$, and $[\mathrm{U}(1)_Y]^3$ — together with the existence of Yukawa couplings, uniquely determine all hypercharge ratios within a generation up to an overall rescaling.
+**Anomaly closure fixes hypercharge ratios.** The mixed anomaly equations - $[\mathrm{SU}(2)_L]^2\mathrm{U}(1)_Y$, $[\mathrm{SU}(3)_c]^2\mathrm{U}(1)_Y$, $\mathrm{grav}^2\mathrm{U}(1)_Y$, and $[\mathrm{U}(1)_Y]^3$ - together with the existence of Yukawa couplings, uniquely determine all hypercharge ratios within a generation up to an overall rescaling.
 
 **Quadratic trace matching fixes the scale.** Define the record trace of a generator $X$ as the sum of squared eigenvalues over all left-handed Weyl fermion states in one generation. For hypercharge, this gives $\mathrm{Tr}_{\mathrm{rec}}(Y^2) = 10/3$. For the $\mathrm{SU}(2)*L$ Cartan generator $T_3$, it gives $\mathrm{Tr}*{\mathrm{rec}}(T_3^2) = 2$.
 
 **Normalisation matching.** Requiring the normalised hypercharge generator $\hat{Y} = c,Y$ to satisfy $\mathrm{Tr}*{\mathrm{rec}}(\hat{Y}^2) = \mathrm{Tr}*{\mathrm{rec}}(T_3^2)$ yields $c^2 = 3/5$, and therefore $g_1 = g_Y\sqrt{5/3}$.
 
-The significance: a numerical invariant that has been treated for fifty years as evidence *for* $\mathrm{SU}(5)$ unification is shown to follow from the record predicates alone, without assuming any embedding. It is a *closure invariant* — a structural consequence of anomaly cancellation and trace normalisation on the minimal chiral template. The fact that it coincides with the $\mathrm{SU}(5)$ prediction is not a coincidence. It is confirmation that the record predicates already encode the unification structure before any group-theoretic ansatz is imposed.
+The significance: a numerical invariant that has been treated for fifty years as evidence *for* $\mathrm{SU}(5)$ unification is shown to follow from the record predicates alone, without assuming any embedding. It is a closure invarian, a structural consequence of anomaly cancellation and trace normalisation on the minimal chiral template. The fact that it coincides with the $\mathrm{SU}(5)$ prediction is not a coincidence. It is confirmation that the record predicates already encode the unification structure before any group-theoretic ansatz is imposed.
 
 ---
 
 ## 9. Unique Breaking Architecture and Minimal Higgs Content
 
-In standard $\mathrm{SO}(10)$ model-building, even after selecting the carrier, there remains enormous freedom in choosing symmetry-breaking routes and Higgs representations. Pati-Salam chains, left-right intermediate symmetries, multiple Higgs irreducible representations ($\mathbf{10}_H$, $\mathbf{45}_H$, $\mathbf{54}_H$, $\mathbf{120}_H$, $\overline{\mathbf{126}}_H$, $\mathbf{210}_H$) — the model-building literature is vast.
+In standard $\mathrm{SO}(10)$ model-building, even after selecting the carrier, there remains enormous freedom in choosing symmetry-breaking routes and Higgs representations. Pati-Salam chains, left-right intermediate symmetries, multiple Higgs irreducible representations ($\mathbf{10}_H$, $\mathbf{45}_H$, $\mathbf{54}_H$, $\mathbf{120}_H$, $\overline{\mathbf{126}}_H$, $\mathbf{210}_H$) - the model-building literature is vast.
 
 The determinant-closed framework collapses this freedom to a single architecture.
 
@@ -265,9 +265,9 @@ $\overline{\mathbf{126}}_H$ is the unique minimal Higgs irreducible representati
 
 $\mathbf{10}_H$ supplies electroweak Higgs doublets and permits the standard Yukawa couplings for charged fermion masses while remaining minimal in the Higgs budget.
 
-Any Higgs irreducible representation beyond $\mathbf{10}_H \oplus \overline{\mathbf{126}}_H$ is either redundant under $\Delta$ (record-indistinguishable and therefore collapsed), disallowed by $\Delta$-stability (introducing non-record branching complexity), or strictly complexity-increasing. The commonly considered additions — $\mathbf{45}_H$, $\mathbf{54}_H$, $\mathbf{120}_H$, $\mathbf{210}_H$ — are all non-minimal unless forced by new record data not present at $\mu_L$.
+Any Higgs irreducible representation beyond $\mathbf{10}_H \oplus \overline{\mathbf{126}}_H$ is either redundant under $\Delta$ (record-indistinguishable and therefore collapsed), disallowed by $\Delta$-stability (introducing non-record branching complexity), or strictly complexity-increasing. The commonly considered additions - $\mathbf{45}_H$, $\mathbf{54}_H$, $\mathbf{120}_H$, $\mathbf{210}_H$ - are all non-minimal unless forced by new record data not present at $\mu_L$.
 
-This is the result that transforms $\mathrm{SO}(10)$ from a *family* of models into a *single* law-selected architecture. The model-building knobs are not freely adjustable — they are either collapsed by degeneracy, quotiented by record-silence, or excluded by minimality.
+This is the result that transforms $\mathrm{SO}(10)$ from a *family* of models into a *single* law-selected architecture. The model-building knobs are not freely adjustable, they are either collapsed by degeneracy, quotiented by record-silence, or excluded by minimality.
 
 ---
 
@@ -285,7 +285,7 @@ The mechanism behind this collapse is precise:
 
 Any modification of a completion that leaves the record predicates $R(\mu_L)$ unchanged is either *removed* by $\partial$ (it is record-silent), *identified* by $\Delta$ (it is prediction-degenerate), or *penalised* by $\mathrm{Comp}$ (it inflates structural cost). In no case can such a modification alter the $\Omega$-initial selection.
 
-This is not a preference for simplicity in the aesthetic sense. It is a *structural collapse* induced by three explicit mathematical operations. The framework does not declare $\mathrm{SO}(10)$ minimal because it is popular or elegant. It declares it minimal because every alternative requires record-visible surplus, intermediate non-record branching, or carrier overgrowth to realise the same record predicates — and all of these are penalised.
+This is not a preference for simplicity in the aesthetic sense. It is a *structural collapse* induced by three explicit mathematical operations. The framework does not declare $\mathrm{SO}(10)$ minimal because it is popular or elegant. It declares it minimal because every alternative requires record-visible surplus, intermediate non-record branching, or carrier overgrowth to realise the same record predicates and all of these are penalised.
 
 ---
 
@@ -293,13 +293,13 @@ This is not a preference for simplicity in the aesthetic sense. It is a *structu
 
 Precision about scope is as important as precision about results. This work explicitly does not:
 
-Predict fermion masses, Yukawa couplings, or mixing parameters. The selection operates at the structural level (gauge group, representations, generation count) and does not extend to continuous flavour parameters. A separate result — the Yukawa no-go theorem — proves that exact Yukawa ratios are *not* law-level quantities within the same framework.
+Predict fermion masses, Yukawa couplings, or mixing parameters. The selection operates at the structural level (gauge group, representations, generation count) and does not extend to continuous flavour parameters. A separate result, the Yukawa no-go theorem proves that exact Yukawa ratios are *not* law-level quantities within the same framework.
 
 Model symmetry-breaking dynamics. The breaking chain is identified as a structural architecture, not as a dynamical history with specified scalar potentials, vacuum expectation values, or phase transitions.
 
 Assume supersymmetry, extra dimensions, or string theory. These may be compatible with the forced completion but are not required for the forcing argument.
 
-Claim that alternative GUTs are mathematically inconsistent. $\mathrm{SU}(5)$, $\mathrm{E}_6$, and all other candidates are perfectly well-defined mathematical structures. They are simply not $\Omega$-initial under the stated admissibility and minimality conditions — they cost more structure than the record can justify.
+Claim that alternative GUTs are mathematically inconsistent. $\mathrm{SU}(5)$, $\mathrm{E}_6$, and all other candidates are perfectly well-defined mathematical structures. They are simply not $\Omega$-initial under the stated admissibility and minimality conditions they cost more structure than the record can justify.
 
 Replace detailed phenomenological studies. Proton decay rates, threshold corrections, detailed RG running, and flavour structure all remain important physics problems. The framework provides the structural backbone within which such studies proceed.
 
@@ -309,11 +309,11 @@ Replace detailed phenomenological studies. Proton decay rates, threshold correct
 
 ### Unification is forced, not hypothesised
 
-For fifty years, the choice of a Grand Unified group has been treated as a theoretical hypothesis — an ansatz selected by physicists on the basis of elegance, convenience, or phenomenological success. The present work eliminates that freedom. Under determinant-closed admissibility, the Standard Model record predicates *force* $\mathrm{SO}(10)$ as the unique law-bearing completion. The question "which GUT?" has a unique, derived answer.
+For fifty years, the choice of a Grand Unified group has been treated as a theoretical hypothesis, an ansatz selected by physicists on the basis of elegance, convenience, or phenomenological success. The present work eliminates that freedom. Under determinant-closed admissibility, the Standard Model record predicates *force* $\mathrm{SO}(10)$ as the unique law-bearing completion. The question "which GUT?" has a unique, derived answer.
 
 ### The right-handed neutrino is structurally mandated
 
-The $\mathrm{SO}(10)$ spinor $\mathbf{16}_F$ includes $\nu_R$ as the sixteenth component. Its presence is a structural consequence of carrier selection, not a phenomenological addition. The experimental discovery of neutrino oscillations is therefore not merely *accommodated* by the framework — it is *postdicted* by the representation theory before any neutrino data is used as input.
+The $\mathrm{SO}(10)$ spinor $\mathbf{16}_F$ includes $\nu_R$ as the sixteenth component. Its presence is a structural consequence of carrier selection, not a phenomenological addition. The experimental discovery of neutrino oscillations is therefore not merely *accommodated* by the framework it's postdicted by the representation theory before any neutrino data is used as input.
 
 ### The seesaw mechanism is the unique admissible mass generation
 
@@ -321,13 +321,13 @@ Among all possible neutrino mass mechanisms, closure admissibility and minimalit
 
 ### The $5/3$ factor is a closure invariant
 
-The canonical GUT hypercharge normalisation — traditionally evidence for $\mathrm{SU}(5)$ embedding — is derived here from the record predicates alone, without assuming any unified group. It is a structural invariant of anomaly closure and trace normalisation on the minimal chiral template.
+The canonical GUT hypercharge normalisation traditionally evidence for $\mathrm{SU}(5)$ embedding is derived here from the record predicates alone, without assuming any unified group. It is a structural invariant of anomaly closure and trace normalisation on the minimal chiral template.
 
 ### Model-building freedom is an illusion
 
 The apparent freedom to choose Higgs representations, breaking chains, intermediate scales, and threshold structures within $\mathrm{SO}(10)$ is eliminated by the admissibility framework. A unique minimal architecture is selected. The conventional knobs are either record-silent (and therefore quotiented out), prediction-degenerate (and therefore collapsed), or complexity-increasing (and therefore excluded). $\mathrm{SO}(10)$ unification is not a family of models. It is a single, determined architecture.
 
-### The result is traditional — the logic is not
+### The result is traditional - the logic is not
 
 What emerges looks familiar to any GUT phenomenologist: $\mathrm{SO}(10)$ with the $\mathbf{16}$ spinor, seesaw neutrino masses, the $5/3$ normalisation, a minimal Higgs sector. But the status of these facts has changed. They are not motivations for choosing a model. They are *outputs* of a selection principle. The framework does not assume unification. It shows that unification is the only law-bearing completion compatible with the record.
 
@@ -344,3 +344,4 @@ One admissibility condition. One complexity functional. One answer.
 **Supporting papers:** See the papers section below for full technical details, proofs, and formal statements.
 
 © 2026 Jeremy Rodgers. All rights reserved. Content released under CC BY-NC-ND 4.0 unless otherwise stated.
+
