--- a/content/manual/problems/grand-unified-theory.mdx
+++ b/content/manual/problems/grand-unified-theory.mdx
@@ -1,6 +1,6 @@
 # Grand Unified Theory
 
-**A determinant-closed derivation of $\mathrm{SO}(10)$ as the unique law-bearing unification carrier — forced by the Standard Model record predicates under anomaly closure, neutrino rigidity, and structural minimality.**
+**A determinant-closed derivation of $\mathrm{SO}(10)$ as the unique law-bearing unification carrier forced by the Standard Model record predicates under anomaly closure, neutrino rigidity, and structural minimality.**
 
 ---
 
@@ -344,4 +344,5 @@ One admissibility condition. One complexity functional. One answer.
 **Supporting papers:** See the papers section below for full technical details, proofs, and formal statements.
 
 © 2026 Jeremy Rodgers. All rights reserved. Content released under CC BY-NC-ND 4.0 unless otherwise stated.
+
 
